--- a/docs/terraformoptions.adoc
+++ b/docs/terraformoptions.adoc
@@ -21,7 +21,7 @@
 
 == Identity and access
 
-[cols="1e,4d,3a,3a", options=header,width="100%"] 
+[stripes=odd,cols="1e,4d,3a,3a", options=header,width="100%"] 
 |===
 |Parameter
 |Description
@@ -62,7 +62,7 @@
 
 == SSH Keys
 
-[cols="1e,4d,3a,3a", options=header,width="100%"] 
+[stripes=odd,cols="1e,4d,3a,3a", options=header,width="100%"] 
 |===
 |Parameter
 |Description
@@ -84,7 +84,7 @@
 
 == General OCI
 
-[cols="1e,4d,3a,3a", options=header,width="100%"] 
+[stripes=odd,cols="1e,4d,3a,3a", options=header,width="100%"] 
 |===
 |Parameter
 |Description
@@ -105,7 +105,7 @@
 
 == Networking
 
-[cols="1e,4d,3a,3a", options=header,width="100%"] 
+[stripes=odd,cols="1e,4d,3a,3a", options=header,width="100%"] 
 |===
 |Parameter
 |Description
@@ -205,7 +205,7 @@ subnets = {
 
 == Bastion
 
-[cols="1e,4d,3a,3a", options=header,width="100%"] 
+[stripes=odd,cols="1e,4d,3a,3a", options=header,width="100%"] 
 |===
 |Parameter
 |Description
@@ -261,7 +261,7 @@ availability_domains = {
 
 == OKE
 
-[cols="1e,4d,3a,3a", options=header,width="100%"] 
+[stripes=odd,cols="1e,4d,3a,3a", options=header,width="100%"] 
 |===
 |Parameter
 |Description
@@ -360,7 +360,7 @@ Refer to {uri-topology}[topology] for more thorough examples.
 
 == OKE Load Balancers
 
-[cols="1e,4d,3a,3a", options=header,width="100%"] 
+[stripes=odd,cols="1e,4d,3a,3a", options=header,width="100%"] 
 |===
 |Parameter
 |Description
@@ -384,7 +384,7 @@ Refer to {uri-topology}[topology] for more thorough examples.
 preferred_lb_ads = ["ad1", "ad2"]
 ----
 |
-[source]
+[source,json]
 ----
 ["ad1", "ad2"]
 ----
@@ -403,7 +403,7 @@ Refer to {uri-topology}[topology] for more thorough examples.
 
 == OCIR
 
-[cols="1e,4d,3a,3a", options=header,width="100%"] 
+[stripes=odd,cols="1e,4d,3a,3a", options=header,width="100%"] 
 |===
 |Parameter
 |Description
@@ -435,7 +435,7 @@ Refer to {uri-topology}[topology] for more thorough examples.
 
 == Helm
 
-[cols="1e,4d,3a,3a", options=header,width="100%"] 
+[stripes=odd,cols="1e,4d,3a,3a", options=header,width="100%"] 
 |===
 |Parameter
 |Description
@@ -466,7 +466,7 @@ Refer to {uri-topology}[topology] for more thorough examples.
 
 == Calico
 
-[cols="1e,4d,3a,3a", options=header,width="100%"] 
+[stripes=odd,cols="1e,4d,3a,3a", options=header,width="100%"] 
 |===
 |Parameter
 |Description
